# Aura-Hi-Res-Player

./: .gitignore  CONTRIBUTING.md  PRIVACY_POLICY.md  README.md  RELEASE_INFO.md  SECURITY.md  SETUP.md  build.gradle.kts  gradle.properties  reset_epson_l3110_doctor_impresora.rar
.aura-mockup/: glass.html
.brand-mockup/: brand-options.html
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: gradle.yml  test-build.yml
app/: build.gradle.kts
app/schemas/iad1tya.echo.music.db.InternalDatabase/: 36.json  37.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/superpowered/: SuperpoweredBridge.cpp
app/src/main/res/drawable/: auto_awesome.xml  battery_charging.xml  ic_launcher_aura_bg.xml  ic_launcher_aura_fg.xml  ic_launcher_aura_mono.xml  ic_search_mic.xml  thumb_down.xml  widget_vinyl_empty.xml
app/src/main/res/layout/: widget_music_player.xml  widget_turntable.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/values-ar/: echo_strings.xml  strings.xml
app/src/main/res/values-b+sr+Latn/: strings.xml
app/src/main/res/values-bg/: echo_strings.xml  strings.xml
app/src/main/res/values-bn/: strings.xml
app/src/main/res/values-bs/: strings.xml
app/src/main/res/values-ca/: echo_strings.xml  strings.xml
app/src/main/res/values-cs/: echo_strings.xml  strings.xml
betterlyrics/: build.gradle.kts
docs/superpowers/plans/: 2026-06-12-eq-login-share.md  2026-06-13-dsp-phase-8a-graphic-eq.md  2026-06-15-device-lock-backend.md  2026-06-15-echo-7-features.md  2026-06-15-jrmusicpro-subscription-licensing.md  2026-06-16-tv-sound-autoeq-backup-plan.md
docs/superpowers/roadmaps/: 2026-06-16-ux-features-roadmap.md
docs/superpowers/specs/: 2026-06-12-eq-login-share-design.md  2026-06-13-jr-music-pro-android-design.md  2026-06-15-device-lock-backend-design.md  2026-06-15-echo-7-features-design.md  2026-06-15-jrmusicpro-subscription-licensing-design.md  2026-06-16-ai-text-playlist-design.md  2026-06-16-aura-loudness-and-theme-design.md  2026-06-17-aura-glass-redesign-design.md
gradle/: libs.versions.toml
jiosaavn/: build.gradle.kts
licensing-worker/: README.md  worker.js
scripts/: generate-jr-icons.ps1
simpmusic/: build.gradle.kts
(+332 files in other folders)
